# models/book.go
@@ -5,3 +5,13 @@ type Book struct {
 	Title  string `json:"title"`
 	Author string `json:"author"`
 }
+
+type CreateBookInput struct {
+	Title  string `json:"title" binding:"required"`
+	Author string `json:"author" binding:"required"`
+}
+
+type UpdateBookInput struct {
+	Title  string `json:"title"`
+	Author string `json:"author"`
+}
